<resources>
    <string name="app_name">Rick and Morty Soundboard</string>
    <string name="lick_my_balls">Lick My Balls</string>
    <string name="wubba_lubba_dub_dub">Wubba Lubba Dub Dub</string>
    <string name="get_schwifty">Get Schwifty</string>
    <string name="tiny_rick">Tiny Rick</string>
    <string name="riggity_wrecked">Riggity Wrecked</string>
    <string name="mr_poopybutthole">Mr Poopybutthole</string>
    <string name="aw_jeez">Aw Jeez Rick</string>
    <string name="mr_meeseeks">Mr Meeseeks</string>
</resources>
